--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">ListViewFiddle</string>
     <string name="action_settings">Settings</string>
+
+    <string name="fragment_add_restaurant_name">Restaurant Name</string>
+    <string name="fragment_add_restaurant_number">Restaurant Number</string>
+    <string name="fragment_add_restaurant_cancel">Cancel</string>
+    <string name="fragment_add_restaurant_ok">OK</string>
 </resources>
